# ChangeLog for sys-kernel/gentoo-sources
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.351 2006/12/16 14:22:56 kloeri Exp $

  16 Dec 2006; Bryan Østergaard <kloeri@gentoo.org>
  gentoo-sources-2.6.19-r2.ebuild:
  Add ~alpha keyword.

*gentoo-sources-2.6.19-r2 (13 Dec 2006)

  13 Dec 2006; Daniel Drake <dsd@gentoo.org>
  +gentoo-sources-2.6.19-r2.ebuild:
  Update to Linux 2.6.19.2. Fix libata status handling.

  07 Dec 2006; Daniel Drake <dsd@gentoo.org>
  gentoo-sources-2.6.18-r4.ebuild:
  Stable on x86 and amd64

*gentoo-sources-2.6.18-r4 (07 Dec 2006)

  07 Dec 2006; Daniel Drake <dsd@gentoo.org>
  +gentoo-sources-2.6.18-r4.ebuild:
  Update to Linux 2.6.18.5

  03 Dec 2006; Markus Rothe <corsair@gentoo.org>
  gentoo-sources-2.6.18-r3.ebuild:
  Stable on ppc64

  02 Dec 2006; Markus Rothe <corsair@gentoo.org>
  gentoo-sources-2.6.19-r1.ebuild:
  Added ~ppc64

*gentoo-sources-2.6.19-r1 (02 Dec 2006)

  02 Dec 2006; Daniel Drake <dsd@gentoo.org>
  +gentoo-sources-2.6.19-r1.ebuild:
  Fix compilation of vesafb-tng, speakup, and fbsplash. Sorry for the bad
  initial release.

  01 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gentoo-sources-2.6.19.ebuild:
  Keyworded ~sparc

  01 Dec 2006; Joseph Jezak <josejx@gentoo.org>
  gentoo-sources-2.6.18-r3.ebuild, gentoo-sources-2.6.19.ebuild:
  Marked 2.6.19 ~ppc and 2.6.18-r3 ppc stable.

*gentoo-sources-2.6.19 (30 Nov 2006)

  30 Nov 2006; Daniel Drake <dsd@gentoo.org> +gentoo-sources-2.6.19.ebuild:
  Initial 2.6.19 release

*gentoo-sources-2.6.18-r3 (20 Nov 2006)

  20 Nov 2006; Daniel Drake <dsd@gentoo.org>
  +gentoo-sources-2.6.18-r3.ebuild:
  Update to Linux 2.6.18.3. Fix xt_physdev compile error. Fix microcode update
  with microcode-ctl-1.15. Fix ieee1394 module reload oops on PPC.

  15 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  gentoo-sources-2.6.18-r2.ebuild:
  Stable on amd64 wrt bug #154566.
