@@ -24,6 +24,8 @@ DIST genpatches-2.6.18-4.base.tar.bz2 90696 RMD160 1e6295205e5428db985c133a36b7a
 DIST genpatches-2.6.18-4.extras.tar.bz2 143265 RMD160 b2b158d42d6116d2a807c05dc8a4ef5680debc98 SHA1 cf9e60c7573a29eca204c310ef4b3260aacb1b49 SHA256 9d8e04c285af164324307d25ef52f16631e91d293c82c82f78e6e4375145a5b7
 DIST genpatches-2.6.18-6.base.tar.bz2 96657 RMD160 b5007a574bf4fd697a7a9e147b4c315b060272b6 SHA1 d3063c33a031ad167150c15d779aacf8e69bc62a SHA256 3e40d86ad7b529185fec2591720ca6de837ed0b03bd430de63e27590888b8e9a
 DIST genpatches-2.6.18-6.extras.tar.bz2 143244 RMD160 bad2fb4772dac2c134e8e8f6736eb31ac458137d SHA1 c8d2afaf40601f89aa6db2c2e8abb0c4cf556812 SHA256 fea0de9b4622b94a44e5637cfcb60bf47673e55f39a2146bc7af791d4611731c
+DIST genpatches-2.6.18-7.base.tar.bz2 104995 RMD160 7c410e8873b76db8cd6fd138e2e727c5ede8047c SHA1 6afe8d626f00a3de0feaebc57a5c975e71140dc3 SHA256 e005ca5843e64f6f3fef640edc2707e5d737e6e5be39155c4b72fe01a5fd50cc
+DIST genpatches-2.6.18-7.extras.tar.bz2 143244 RMD160 bad2fb4772dac2c134e8e8f6736eb31ac458137d SHA1 c8d2afaf40601f89aa6db2c2e8abb0c4cf556812 SHA256 fea0de9b4622b94a44e5637cfcb60bf47673e55f39a2146bc7af791d4611731c
 DIST genpatches-2.6.19-1.base.tar.bz2 2094 RMD160 85c472878cdbb4f1224e3c92838c117efe72982c SHA1 a1cd77063f3d712f907b78e0371ec6160040dfb4 SHA256 72449c4be0bdd71986200e2729782b42aec7cf41149f0d9e7f08d2caec053521
 DIST genpatches-2.6.19-1.extras.tar.bz2 139875 RMD160 4e418ab59a29ec38852a45ee1c8e2974c0b9de6d SHA1 0bc774dcc3c2c6bc15963126bf693032b0bed45f SHA256 562b5009efbcc2d17fd5f8fbd0ef5eaeccd542a775960050ce6ca751720331cf
 DIST genpatches-2.6.19-2.base.tar.bz2 2057 RMD160 9abc074d09f53c89a4f6a98a0ac007e7f69463cf SHA1 1db3f586358f3a722576b6f0077cdf347d784d81 SHA256 b8f3e88daadad3808006a5948cebef85976fa3bcea224cf8169b2ac38de725c3
@@ -73,6 +75,10 @@ EBUILD gentoo-sources-2.6.18-r4.ebuild 1231 RMD160 a6ed14d9f9d287fef0fc0f8bcdffd
 MD5 f0d780b4cb53bc3962df3f397faae19a gentoo-sources-2.6.18-r4.ebuild 1231
 RMD160 a6ed14d9f9d287fef0fc0f8bcdffdb9eb5dc4b19 gentoo-sources-2.6.18-r4.ebuild 1231
 SHA256 93003d2014e5ae84af35fed93eabef71eac98b8faaed7ef3346410e7d3e6cdcb gentoo-sources-2.6.18-r4.ebuild 1231
+EBUILD gentoo-sources-2.6.18-r5.ebuild 1233 RMD160 79bd86db766826d27b96e4d67a92f97d3f616012 SHA1 e642022162b61ef1e610d154d8632ca34012f299 SHA256 bec146ff4fe5fb4d45f656baefdf884c2415fc4587a002f31396dc17801d75a9
+MD5 caadbc6969415f302e0a6851d133c004 gentoo-sources-2.6.18-r5.ebuild 1233
+RMD160 79bd86db766826d27b96e4d67a92f97d3f616012 gentoo-sources-2.6.18-r5.ebuild 1233
+SHA256 bec146ff4fe5fb4d45f656baefdf884c2415fc4587a002f31396dc17801d75a9 gentoo-sources-2.6.18-r5.ebuild 1233
 EBUILD gentoo-sources-2.6.18.ebuild 1232 RMD160 1370fa2c089e32f71fa27b1c9fe64ac1774503ed SHA1 dc2f7cdabf6ede50f0c3344badaedda3f4b5015e SHA256 13ae33b8034a4b176d83fae30a298aed96e40d36aa7660f740f51f01f0bee5d0
 MD5 7b4cf466c45ac4e8c1625d31fdf9b05a gentoo-sources-2.6.18.ebuild 1232
 RMD160 1370fa2c089e32f71fa27b1c9fe64ac1774503ed gentoo-sources-2.6.18.ebuild 1232
@@ -89,10 +95,10 @@ EBUILD gentoo-sources-2.6.19.ebuild 731 RMD160 653b6aaaafaf17c8577a32078e160f8bc
 MD5 517c46c137a83552d2879a0a0b23be72 gentoo-sources-2.6.19.ebuild 731
 RMD160 653b6aaaafaf17c8577a32078e160f8bc80deba1 gentoo-sources-2.6.19.ebuild 731
 SHA256 d6e2a0e44dfd97cb1ff1d6e889e98e0704ff645ed40003af71cf3f92ee25c110 gentoo-sources-2.6.19.ebuild 731
-MISC ChangeLog 74496 RMD160 d526538e8462993882b77d011a66d63527ee8ff1 SHA1 ef82c04cea2283d5d3089242ba549309600f0e40 SHA256 6e97fcc0e627e9f70d02693ef30a79c8effe284ada9d91df9560adb71c64a45e
-MD5 30988e4fbd58ed1e42682650b4393c5f ChangeLog 74496
-RMD160 d526538e8462993882b77d011a66d63527ee8ff1 ChangeLog 74496
-SHA256 6e97fcc0e627e9f70d02693ef30a79c8effe284ada9d91df9560adb71c64a45e ChangeLog 74496
+MISC ChangeLog 74715 RMD160 d46fa75f2d21b3f976140aae68b34e613e261152 SHA1 f5e216bac2be16e76e08bce31ef053883df8c56f SHA256 4bd24e162392bb861b4b189349633f37eebcdee09b03474644cdc3ca2e91762e
+MD5 c3fee50c2a0f60b92a7670f781044399 ChangeLog 74715
+RMD160 d46fa75f2d21b3f976140aae68b34e613e261152 ChangeLog 74715
+SHA256 4bd24e162392bb861b4b189349633f37eebcdee09b03474644cdc3ca2e91762e ChangeLog 74715
 MISC metadata.xml 283 RMD160 fa426498783bbc55b5e1ace3dced6ed35ab83c83 SHA1 6f848a776c16d39a04d9a363fd14bf5ca15e7d42 SHA256 16eda12305d2f4dba1a5650d79f49204d23c82de0d9883424dc74b3d372e45e2
 MD5 410c3afeb274354a7ce68257edc18012 metadata.xml 283
 RMD160 fa426498783bbc55b5e1ace3dced6ed35ab83c83 metadata.xml 283
@@ -127,6 +133,9 @@ SHA256 107ccb108dcd738d57d882b68e7cc55126bfc407ba50d00bc61b87b4d6a2109c files/di
 MD5 1d97a8220dd3d450fb69e21f8dcb3bb8 files/digest-gentoo-sources-2.6.18-r4 804
 RMD160 9e1658c31cb9d85a4cdaf082dc9055dd96454f85 files/digest-gentoo-sources-2.6.18-r4 804
 SHA256 275c890732efcdb20b93f7a1bb18e847ce08bfa33ec58298ba4d3677c2e9e2e5 files/digest-gentoo-sources-2.6.18-r4 804
+MD5 015e1f7d3b506f3a22b1065a67ddd6a1 files/digest-gentoo-sources-2.6.18-r5 807
+RMD160 f48dac1eccabcbeeb09ad9dd925971695c85ce53 files/digest-gentoo-sources-2.6.18-r5 807
+SHA256 844aa626a4998a185b0124b1dc0827167a82b0d50ed5770d061e2e13346e7dbc files/digest-gentoo-sources-2.6.18-r5 807
 MD5 2300c08d7718f23287fc6ae831ebad47 files/digest-gentoo-sources-2.6.19 801
 RMD160 de51b1ddb66492b410c918c4bc81c35b2b244468 files/digest-gentoo-sources-2.6.19 801
 SHA256 8e803c714320e00dfe99d1e7ff264ae308c2399b647471e36eaf970e7e85f72c files/digest-gentoo-sources-2.6.19 801
