@@ -1,0 +1,9 @@
+MD5 dd3e3fa7e0364a3f06a1e48ccb2e5e12 genpatches-2.6.18-7.base.tar.bz2 104995
+RMD160 7c410e8873b76db8cd6fd138e2e727c5ede8047c genpatches-2.6.18-7.base.tar.bz2 104995
+SHA256 e005ca5843e64f6f3fef640edc2707e5d737e6e5be39155c4b72fe01a5fd50cc genpatches-2.6.18-7.base.tar.bz2 104995
+MD5 b0d64016b792ddc54994c0d5c0963f26 genpatches-2.6.18-7.extras.tar.bz2 143244
+RMD160 bad2fb4772dac2c134e8e8f6736eb31ac458137d genpatches-2.6.18-7.extras.tar.bz2 143244
+SHA256 fea0de9b4622b94a44e5637cfcb60bf47673e55f39a2146bc7af791d4611731c genpatches-2.6.18-7.extras.tar.bz2 143244
+MD5 296a6d150d260144639c3664d127d174 linux-2.6.18.tar.bz2 41863580
+RMD160 f92283f956880676bfb1f1d5288325461e4e02e7 linux-2.6.18.tar.bz2 41863580
+SHA256 c95280ff6c5d2a17788f7cc582d23ae8a9a7ba3f202ec6e4238eaadfce7c163d linux-2.6.18.tar.bz2 41863580
