@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.351 2006/12/16 14:22:56 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.352 2006/12/20 14:25:28 dsd Exp $
+
+*gentoo-sources-2.6.18-r5 (20 Dec 2006)
+
+  20 Dec 2006; Daniel Drake <dsd@gentoo.org>
+  +gentoo-sources-2.6.18-r5.ebuild:
+  Update to Linux 2.6.18.6. Fix token ring networking security hole. Fix
+  libata status handling.
 
   16 Dec 2006; Bryan Østergaard <kloeri@gentoo.org>
   gentoo-sources-2.6.19-r2.ebuild:
@@ -10,7 +17,7 @@
 
   13 Dec 2006; Daniel Drake <dsd@gentoo.org>
   +gentoo-sources-2.6.19-r2.ebuild:
-  Update to Linux 2.6.19.2. Fix libata status handling.
+  Update to Linux 2.6.19.1. Fix libata status handling.
 
   07 Dec 2006; Daniel Drake <dsd@gentoo.org>
   gentoo-sources-2.6.18-r4.ebuild:
